syntax = "proto3";
package replication;

service ReplicaService {
  rpc SetReplica (SetReplicaRequest) returns (SetReplicaResponse);
  // rpc DeleteReplica (DeleteReplicaRequest) returns (DeleteReplicaResponse);
}

message SetReplicaRequest {
  message Record {
    string key = 1;
    string value = 2;
    uint64 millis_since_leader_init = 3;
  }

  repeated Record records = 1;
}

message SetReplicaResponse {}

service LeaderService {
  rpc RegisterFollower (RegisterFollowerRequest) returns (RegisterFollowerResponse);
}

message RegisterFollowerRequest {
  uint32 host_port = 1;
}

message RegisterFollowerResponse {
  string serialized_snapshot = 1;
}
