syntax = "proto3";
package store;

// TODO: split this into a read service and a write service
service StoreService {
  rpc Set (SetRequest) returns (SetResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {}

message GetRequest {
  string key = 1;
}

message GetResponse {
  oneof value {
    string string_value = 1;
  }
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {}
